--- a/cf-backup.html.md.erb
+++ b/cf-backup.html.md.erb
@@ -110,6 +110,11 @@ To configure `cf-deployment` to use an S3-compatible unversioned blobstore with 
 
 After you have configured Cloud Foundry to be compatible with BBR, you can back up and restore Cloud Foundry.
 
-Follow the procedures in the [Back up a BOSH Deployment](backup.html#back-up-deployment) section of _Backing up with BOSH Backup and Restore_ and the [Restore a BOSH Deployment](restore.html#restore-deployment) section of _Restoring with BOSH Backup and Restore_.
+Follow the procedures in the [Back Up a BOSH Deployment](backup.html#back-up-deployment) section
+of _Backing up with BOSH Backup and Restore_ and the [Restore a BOSH Deployment](restore.html#restore-deployment) section
+of _Restoring with BOSH Backup and Restore_.
 
-At minimum, run the pre-backup check against your Cloud Foundry deployment by following the first two steps of the [Back up a BOSH Deployment](backup.html#back-up-deployment) section of _Backing up with BOSH Backup_. This lists the scripts that run during a backup and the order in which they are applied.
+At minimum, run the pre-backup check against your Cloud Foundry deployment by following
+the first two steps of the [Back Up a BOSH Deployment](backup.html#back-up-deployment) section
+of _Backing up with BOSH Backup_.
+This lists the scripts that run during a backup and the order in which they are applied.
