--- a/restore.html.md.erb
+++ b/restore.html.md.erb
@@ -121,16 +121,17 @@ If the command fails, follow the steps in [Recover from a Failing Command](#reco
 1. Ensure that the jumpbox can reach the BOSH Director.
 1. Ensure the source BOSH deployment is compatible with the target BOSH deployment.
 1. If you see the error message `Directory /var/vcap/store/bbr-backup already exists on instance`,
-run the relevant cleanup command. See [Clean up After Failed Restore](#manual-clean).
+run the relevant cleanup command. See [Clean Up after Failed Restore](#manual-clean).
 
 ## <a id='cancel-restore'></a>Cancel a Restore
 
 If you need to cancel a restore, perform the following steps:
 
 1. Terminate the BBR process by pressing Ctrl-C and typing `yes` to confirm.
-1. Stopping a restore can leave the system in an unusable state and prevent future restores. Perform the procedures in the [Clean up After Failed Restore](#manual-clean) section to enable future restores.
+1. Stopping a restore can leave the system in an unusable state and prevent future restores.
+   Perform the procedures in the [Clean Up after Failed Restore](#manual-clean) section to enable future restores.
 
-## <a id="manual-clean"></a>Clean up After Failed Restore
+## <a id="manual-clean"></a>Clean Up after Failed Restore
 
 If your restore process fails, then the process may leave the BBR restore folder on the instance. As a result, any subsequent restore attempts may also fail. In addition, BBR may not have run the post-restore scripts, which can leave the instance in a locked state.
 
