--- a/restore.html.md.erb
+++ b/restore.html.md.erb
@@ -5,69 +5,72 @@ owner: BBR
 
 This topic describes how to use BOSH Backup and Restore (BBR) to restore a BOSH deployment or BOSH Director.
 
-To back up a BOSH deployment or BOSH Director with BBR, see [Backing Up with BOSH Backup and Restore](backup.html).
+To back up a BOSH deployment or BOSH Director with BBR, see the [Backing up with BOSH Backup and Restore](backup.html) topic.
 
 The steps in this topic allow you to restore a BOSH Director, a BOSH deployment, or both.
 
-
 ## <a id="compatibility"></a> Compatibility of Restore
 
-This section describes the restrictions for a backup artifact to be restorable to another environment. This section is for guidance only, and <%= vars.recommended_by %> recommends that operators validate their backups by using the backup artifacts in a restore.
+This section describes the restrictions for a backup artifact to be restorable to another environment.
+This section is for guidance only, and we recommend that operators validate their backups by using the backup artifacts in a restore.
 
-The restrictions for a backup artifact to be restorable are:
+The restrictions for a backup artifact to be restorable are the following:
 
-* **Topology:** BBR requires the BOSH topology of a deployment to be the same in the restore environment as it was in the backup environment.
++ **Topology**: BBR requires the BOSH topology of a deployment to be the same in the restore
+environment as it was in the backup environment.
++ **Naming of instance groups and jobs**: For any deployment that implements the backup and restore
+scripts, the instance groups and jobs must have the same names.
++ **Number of instance groups and jobs**: For instance groups and jobs that have backup and restore
+scripts, there must be the same number of instances.
++ **Limited validation**: BBR puts the backed up data into the corresponding instance groups and
+jobs in the restored environment, but cannot validate the restore beyond that.
+For example, if the MySQL encryption key is different in the restore environment, the BBR restore
+might succeed although the restored MySQL database is unusable.
 
-* **Naming of instance groups and jobs:** For any deployment that implements the backup and restore scripts, the instance groups and jobs must have the same names.
-
-* **Number of instance groups and jobs:** For instance groups and jobs that have backup and restore scripts, there must be the same number of instances.
-
-* **Limited validation:** BBR puts the backed up data into the corresponding instance groups and jobs in the restored environment, but cannot validate the restore beyond that. For example, if the MySQL encryption key is different in the restore environment, the BBR restore might succeed although the restored MySQL database is unusable.
-
-<p class="note"><strong>Note:</strong> A change in VM size or underlying hardware should not affect BBR's ability to restore data, as long as there is adequate storage space to restore the data.</p>
-
+<p class="note"><strong>Note</strong>: A change in VM size or underlying hardware should not affect
+BBR's ability to restore data, as long as there is adequate storage space to restore the data.</p>
 
 ## <a id="recreate-vms"></a> Step 1: Recreate VMs
 
-Before restoring a BOSH Director or deployment, you must create the VMs that constitute that BOSH Director or deployment.
+Before restoring a BOSH deployment or Director, you must create the VMs that constitute that
+deployment or Director.
 
-In a disaster recovery scenario, you can re-create the deployment with your BOSH deployment manifest. If you used the `--with-manifest` flag when running the BBR backup command, your backup artifact includes a copy of your manifest.
+In a disaster recovery scenario, you can re-create the deployment with your BOSH deployment
+manifest.
+If you used the `--with-manifest` flag when running the BBR backup command, your backup artifact
+includes a copy of your manifest.
 
-Alternatively, if you are restoring a deployment and you have already restored the BOSH Director which contains knowledge of this deployment, your VMs for the deployment are brought back by the BOSH Director as long as the BOSH Resurrector is enabled. For more information, see [Auto-healing Capabilities](https://bosh.io/docs/resurrector.html) in the BOSH documentation.
-
+Alternatively, if you are restoring a deployment and you have already restored the Director which
+contains knowledge of this deployment, as long as the
+[BOSH Resurrector](https://bosh.io/docs/resurrector.html) is enabled your VMs for the deployment
+will be brought back by the Director.
 
 ## <a id="artifacts-jumpbox"></a> Step 2: Transfer Artifacts to Jumpbox
 
-After recreating your VMs, you must move your BBR backup artifact from your safe storage location to the jumpbox.
+Move your BBR backup artifact from your safe storage location to the jumpbox.
 
-For instance, to SCP the backup artifact to your jumpbox, run:
+For instance, you could run the following command to SCP the backup artifact to your jumpbox:
 
 ```
 scp LOCAL-PATH-TO-BACKUP-ARTIFACT JUMPBOX-USER/JUMPBOX-ADDRESS
 ```
 
-Where:
-
-* `LOCAL-PATH-TO-BACKUP-ARTIFACT` is where your BBR backup artifact is located.
-
-* `JUMPBOX-USER/JUMPBOX-ADDRESS` is the user and location of your jumpbox.
-
 If this artifact is encrypted, you must decrypt it.
 
-
 ## <a id='restore'></a> Step 3: Restore
+<p class="note"><strong>Note</strong>: The BBR restore command can take a long time to complete.
+You can run it independently of the SSH session so that the process can continue running even if
+your connection to the jumpbox fails. The command above uses <code>nohup</code>, but you run
+the command in a <code>screen</code> or <code>tmux</code> session instead.</p>
 
-<p class="note"><strong>Note</strong>: The BBR restore command can take a long time to complete. You can run it independently of the SSH session, so the process can continue running even if your connection to the jumpbox fails. The command above uses <code>nohup</code>, but you run the command in a <code>screen</code> or <code>tmux</code> session instead.</p>
-
-Use the optional `--debug` flag to enable debug logs. For more information, see [BBR Logging](logging.html).
+Use the optional `--debug` flag to enable debug logs. See the [BBR Logging](logging.html) topic for more information.
 
 #### <a id='restore-director'></a> Restore a BOSH Director
 
-To restore a BOSH Director:
+Perform the following steps to restore a BOSH Director:
 
-1. Ensure the BOSH Director backup artifact is in the folder from which you intend to run BBR.
-
-1. From your jumpbox, restore the BOSH Director by running:
+1. Ensure the BOSH Director backup artifact is in the folder you will run BBR from.
+1. Run the BBR restore command from your jumpbox to restore the BOSH Director:
 
     ```
     nohup bbr director \  
@@ -77,21 +80,20 @@ To restore a BOSH Director:
     restore \
     --artifact-path PATH-TO-DIRECTOR-BACKUP
     ```
-    Where:
-    * `PATH-TO-PRIVATE-KEY` is the path to the SSH private key used to connect to the BOSH Director.
-    * `USER-NAME` is the SSH username of the BOSH Director.
-    * `HOST` is the address of the BOSH Director with an optional port that defaults to 22. If the BOSH Director is public, this is a URL, such as `https://my-bosh.xxx.cf-app.com`. Otherwise, this is the BOSH Director IP address.
-	* `PATH-TO-DIRECTOR-BACKUP` is the path to the BOSH Director backup you want to restore.
+    Replace the placeholder values as follows:
+    * `PATH-TO-PRIVATE-KEY`: This is the path to the SSH private key used to connect to the BOSH Director.
+    * `USER-NAME`: This is the SSH username of the BOSH Director.
+    * `HOST`: This is the address of the BOSH Director with an optional port that defaults to 22. If the BOSH Director is public, this is a URL, such as `https://my-bosh.xxx.cf-app.com`. Otherwise, this is the BOSH Director IP address.
+	* `PATH-TO-DIRECTOR-BACKUP`: This is the path to the BOSH Director backup you want to restore.
 
 If the command fails, follow the steps in [Recover from a Failing Command](#recover-from-failing-command).
 
 #### <a id='restore-deployment'></a> Restore a BOSH Deployment
 
-To restore a BOSH deployment:
+Perform the following steps to restore a BOSH deployment:
 
-1. Ensure the BOSH deployment backup artifact is in the folder from which you intend to run BBR.
-
-1. Run:
+1. Ensure the BOSH deployment backup artifact is in the folder you will run BBR from.
+1. Run the BBR restore:
 
     ```
     BOSH_CLIENT_SECRET=BOSH-CLIENT-SECRET \
@@ -103,84 +105,56 @@ To restore a BOSH deployment:
     restore \
     --artifact-path PATH-TO-DEPLOYMENT-BACKUP
     ```
-    Where:
-    * `BOSH-CLIENT` and `BOSH-CLIENT-SECRET` are your BOSH Director authentication credentials. If you have a BOSH Director with User Account and Authentication (UAA) as the authentication provider, use a UAA client as the username and a UAA client secret as the password. If you have a BOSH Director with basic auth configured, use your username and password.
-    * `BOSH-TARGET` is the fully-qualified domain name (FQDN) or IP address of your BOSH Director.
-    * `DEPLOYMENT-NAME` is the name of the deployment you want to restore.
-    * `PATH-TO-BOSH-CA-CERTIFICATE` is the path to the BOSH Director's Certificate Authority (CA) certificate if the certificate is not verifiable by the local machine's certificate chain.
-	* `PATH-TO-DEPLOYMENT-BACKUP` is the path to the BOSH deployment backup you want to restore.
+    Replace the placeholder values as follows:
+    * `BOSH-CLIENT`, `BOSH-CLIENT-SECRET`: If you have a BOSH Director with User Account and Authentication (UAA) as the authentication provider, use a UAA client as the username and a UAA client secret as the password. If you have a BOSH Director with basic auth configured, use your username and password.
+    * `BOSH-TARGET`: This is the FQDN or IP address of your BOSH Director.
+    * `DEPLOYMENT-NAME`: This is the name of the deployment you want to restore.
+    * `PATH-TO-BOSH-CA-CERTIFICATE`: This is the path to the BOSH Director's Certificate Authority (CA) certificate if the certificate is not verifiable by the local machine's certificate chain.
+	* `PATH-TO-DEPLOYMENT-BACKUP`: This is the path to the BOSH deployment backup you want to restore.
 
-If the command fails, see [Recover From a Failing Command](#recover-from-failing-command).
+If the command fails, follow the steps in [Recover from a Failing Command](#recover-from-failing-command).
 
-
-## <a id="recover-from-failing-command"></a> Recover From a Failing Command
-
-To recover from a failing BBR restore command:
-
+## <a id="recover-from-failing-command"></a>Recover from a Failing Command
 1. Ensure all the parameters in the command are set.
-
 1. Ensure the BOSH Director credentials are valid.
-
 1. Ensure the specified BOSH deployment exists.
-
 1. Ensure that the jumpbox can reach the BOSH Director.
-
 1. Ensure the source BOSH deployment is compatible with the target BOSH deployment.
+1. If you see the error message `Directory /var/vcap/store/bbr-backup already exists on instance`,
+run the relevant cleanup command. See [Clean Up after Failed Restore](#manual-clean).
 
-1. If you see the error message `Directory /var/vcap/store/bbr-backup already exists on instance`, run the relevant cleanup command. For more information, see [Clean Up After Failed Restore](#manual-clean).
+## <a id='cancel-restore'></a>Cancel a Restore
 
-
-## <a id='cancel-restore'></a> Cancel a Restore
-
-To cancel a restore:
+If you need to cancel a restore, perform the following steps:
 
 1. Terminate the BBR process by pressing Ctrl-C and typing `yes` to confirm.
+1. Stopping a restore can leave the system in an unusable state and prevent future restores.
+   Perform the procedures in the [Clean Up after Failed Restore](#manual-clean) section to enable future restores.
 
-1. Stopping a restore can leave the system in an unusable state and prevent future restores. To enable future restores, see [Clean Up After Failed Restore](#manual-clean).
+## <a id="manual-clean"></a>Clean Up after Failed Restore
 
+If your restore process fails, then the process may leave the BBR restore folder on the instance. As a result, any subsequent restore attempts may also fail. In addition, BBR may not have run the post-restore scripts, which can leave the instance in a locked state.
 
-## <a id="manual-clean"></a> Clean Up After Failed Restore
+In order to resolve these issues, run the BBR cleanup script.
 
-If your restore process fails, the process may leave the BBR restore folder on the instance. As a result, any subsequent restore attempts may also fail. In addition, BBR may not have run the post-restore scripts, which can leave the instance in a locked state.
+To clean up after a failed BOSH Director restore, run the following command:
 
-In order to resolve these issues, you must run the BBR cleanup script.
+```
+bbr director \
+--private-key-path PATH-TO-PRIVATE-KEY \
+--username USER-NAME \
+--host HOST
+restore-cleanup
+```
 
-To clean up after a failed BOSH Director restore:
+To clean up after a failed BOSH deployment restore, run the following command:
 
-1. Navigate to the folder from which you ran BBR.
-
-1. Run:
-
-    ```
-    bbr director \
-    --private-key-path PATH-TO-PRIVATE-KEY \
-    --username USER-NAME \
-    --host HOST
-    restore-cleanup
-    ```
-    Where:
-    * `PATH-TO-PRIVATE-KEY` is the path to the SSH private key used to connect to the BOSH Director.
-    * `USER-NAME` is the SSH username of the BOSH Director.
-    * `HOST` is the address of the BOSH Director with an optional port that defaults to 22. If the BOSH Director is public, this is a URL, such as `https://my-bosh.xxx.cf-app.com`. Otherwise, this is the BOSH Director IP address.
-
-To clean up after a failed BOSH deployment restore:
-
-1. Navigate to the folder from which you ran BBR.
-
-1. Run:
-
-    ```
-    BOSH_CLIENT_SECRET=BOSH-CLIENT-SECRET \
-    bbr deployment \
-    --target BOSH-TARGET \
-    --username BOSH-CLIENT \
-    --deployment DEPLOYMENT-NAME \
-    --ca-cert PATH-TO-BOSH-CA-CERTIFICATE \
-    restore-cleanup
-    ```
-    Where:
-    * `BOSH-CLIENT` and `BOSH-CLIENT-SECRET` are your BOSH Director authentication credentials. If you have a BOSH Director with UAA as the authentication provider, use a UAA client as the username and a UAA client secret as the password. If you have a BOSH Director with basic auth configured, use your username and password.
-    * `BOSH-TARGET` is the FQDN or IP address of your BOSH Director.
-    * `DEPLOYMENT-NAME` is the name of the deployment you want to restore.
-    * `PATH-TO-BOSH-CA-CERTIFICATE` is the path to the BOSH Director's Certificate Authority (CA) certificate if the certificate is not verifiable by the local machine's certificate chain.
-
+```
+BOSH_CLIENT_SECRET=BOSH-CLIENT-SECRET \
+bbr deployment \
+--target BOSH-TARGET \
+--username BOSH-CLIENT \
+--deployment DEPLOYMENT-NAME \
+--ca-cert PATH-TO-BOSH-CA-CERTIFICATE \
+restore-cleanup
+```
