--- a/restore.html.md.erb
+++ b/restore.html.md.erb
@@ -12,7 +12,8 @@ The steps in this topic allow you to restore a BOSH Director, a BOSH deployment,
 ## <a id="compatibility"></a> Compatibility of Restore
 
 This section describes the restrictions for a backup artifact to be restorable to another environment.
-This section is for guidance only, and we recommend that operators validate their backups by using the backup artifacts in a restore.
+This section is for guidance only, and <%= vars.recommended_by %> recommends that operators validate their backups
+by using the backup artifacts in a restore.
 
 The restrictions for a backup artifact to be restorable are the following:
 
